--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.star {
+	font-size: x-large;
+	color: #99B21F;
+	opacity: 0.5;
+}
+.stared {
+	opacity: 1.0;
+}
