--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,8 +52,8 @@
           <a class="brand" href="#">Sealion</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
+              <li><%= link_to "NextAction", "/tasks/nextaction"  %></li>
+              <li><%= link_to "未完了", "/tasks/uncomplete"  %></li>
               <li><%= link_to "Link3", "/path3"  %></li>
             </ul>
             <!-- login, logoutのリンクを追加したい -->
@@ -78,8 +78,8 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
+              <li><%= link_to "NextAction", "/tasks/nextaction"  %></li>
+              <li><%= link_to "未完了", "/tasks/uncomplete"  %></li>
               <li><%= link_to "Link3", "/path3"  %></li>
             </ul>
           </div><!--/.well -->
