--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,3 +17,7 @@
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
+
+<h2>タスク一覧</h2>
+<%= render 'share/tasks', tasks: @project.tasks.uncompleted %>
+
