--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>PorjectId:</strong>
+  <%= @task.project_id %>
+</p>
+
+<p>
   <strong>Complete:</strong>
   <%= @task.complete %>
 </p>
