--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Sealion" %></title>
     <%= csrf_meta_tags %>
-
+  
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
@@ -54,7 +54,7 @@
             <ul class="nav">
               <li><%= link_to "NextAction", "/tasks/nextaction"  %></li>
               <li><%= link_to "未完了", "/tasks/uncomplete"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Projects", "/projects"  %></li>
             </ul>
             <!-- login, logoutのリンクを追加したい -->
             <ul class="nav pull-right">
@@ -80,7 +80,7 @@
               <li class="nav-header">Sidebar</li>
               <li><%= link_to "NextAction", "/tasks/nextaction"  %></li>
               <li><%= link_to "未完了", "/tasks/uncomplete"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Projets", "/projects"  %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
